infra/k8s/base/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: api
      containers:
        - name: api
          image: kamilwronka7/lootlog-api:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "800m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
          ports:
            - name: container-port
              containerPort: 4000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4000
          readinessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 20
