infra/k8s/base/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
    service: api
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: api
