infra/k8s/base/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api

spec:
  rules:
    - host: dev-api.lootlog.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
